app/[locale]/styles/partials/_navigation.scss
@use "../mixins" as *;
@use "./mixins" as *;
@use "./vars" as *;

.navigation {
  display: flex;
  z-index: 10;
  position: relative;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 0.6rem 0.5rem 0.6rem;
  gap: 1.5rem;

  @include useScreen("mobile-lg") {
    padding: 1.5rem 2rem 0.5rem 2rem;
  }
  @include useScreen("tablet-lg") {
    padding: 2rem 2rem 0.5rem 2rem;
  }
  @include useScreen("tablet-xl") {
    max-width: 1200px;
    margin: 0 auto;
    gap: 13.5rem;
  }
}

.fixed-header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
}

.container-items {
  @include flex(row, space-between, center);
  padding: 0.3rem 0.6rem;
  border-radius: var(--border-radius--lg);
  gap: 1rem;

  &__frame {
    background: var(--color--white);
    box-shadow: 0 0 10px var(--box-shadow);
  }

  &__item {
    > a {
      color: var(--color--blue-grey-1);
      font-weight: 500;

      @include useOnHover {
        color: var(--color--orange-3);
      }
      @include useOnClick {
        color: var(--color--orange-2);
      }
    }
  }

  &__item-color {
    > a {
      color: var(--color--white-grey);

      @include useOnHover {
        color: var(--color--light-blue-1);
      }
      @include useOnClick {
        color: var(--color--light-blue-3);
      }
    }
  }
}
[data-theme="dark"] .container-items {
  background: var(--color--blue-grey-4);

  &__item {
    > a {
      color: var(--color--white-grey);

      @include useOnHover {
        color: var(--color--light-blue-3);
      }
      @include useOnClick {
        color: var(--color--light-blue-2);
      }
    }
  }

  &__item-color {
    > a {
      color: var(--color--blue-grey-2);
      @include useOnHover {
        color: var(--color--orange-3);
      }
      @include useOnClick {
        color: var(--color--light-blue-2);
      }
    }
  }
}

.navigation-items {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  padding: 0.3rem 0.7rem;
  border-radius: var(--border-radius--lg);
  gap: 2rem;

  @include useScreen("tablet-xl") {
    flex-wrap: nowrap;
    justify-content: space-between;
  }

  &__item {
    > a {
      color: var(--color--blue-grey-1);
      font-weight: 500;

      @include useOnHover {
        color: var(--color--orange-3);
      }
      @include useOnClick {
        color: var(--color--orange-2);
      }
    }
  }

  &__item-color {
    > a {
      color: var(--color--white-grey);

      @include useOnHover {
        color: var(--color--light-blue-2);
      }
      @include useOnClick {
        color: var(--color--light-blue-3);
      }
    }
  }
}
[data-theme="dark"] .navigation-items {
  &__item {
    > a {
      color: var(--color--white-grey);

      @include useOnHover {
        color: var(--color--light-blue-3);
      }
      @include useOnClick {
        color: var(--color--light-blue-2);
      }
    }
  }
  &__item-color {
    > a {
      color: var(--color--blue-grey-2);

      @include useOnHover {
        color: var(--color--orange-1);
      }
      @include useOnClick {
        color: var(--color--orange-3);
      }
    }
  }
}

.active-menu {
  transform: scale(var(--scale));
  > a {
    color: var(--color--light-blue-3);
  }

  &__banner {
    > a {
      color: var(--color--light-blue-1);
    }
  }
}
[data-theme="dark"] .active-menu {
  > a {
    color: var(--color--orange-2);
  }

  &__banner {
    > a {
      color: var(--color--orange-2);
    }
  }
}

.burgerBackdrop {
  opacity: 0;
  visibility: hidden;
  z-index: 99;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background: var(--color--dark-opacity);

  &__active {
    opacity: 1;
    visibility: visible;
  }
}

.burgerBackground {
  opacity: 0;
  z-index: 102;
  position: fixed;
  top: 0;
  left: 0;
  width: 50%;
  height: 100vh;
  background: var(--color--white);
  transition: var(--transition);
  transform: translateY(-100%);

  &__active {
    opacity: 1;
    transition: var(--transition);
    transform: translateY(0);
  }
}
[data-theme="dark"] .burgerBackground {
  background: var(--color--blue-grey-4);
}

.burgerColumn {
  display: flex;
  z-index: 103;
  position: relative;
  flex-direction: column;
  align-items: center;
  width: 100%;
  height: 100%;
  padding: 8rem 3rem;
  overflow: auto;
  gap: 4rem;

  @include useScreen("mobile-lg") {
    padding: 8rem;
  }
}

.burgerSwitchers {
  z-index: 110;
  background: var(--color--white-grey);
}
[data-theme="dark"] .burgerSwitchers {
  background: var(--color--blue-grey-3);
}

.visible {
  opacity: 1;
  transition: var(--transition);
}
.invisible {
  opacity: 0;
  transition: var(--transition);
}

